@@ -1198,7 +1198,7 @@ sub filter_sam
                 if ($tag_values) {
                     my $tag_value = '';
                     for my $i (11 .. $#sam) {
-                        last if (($tag_value) = $sam[$i] =~ /^${tag}:Z:(.*)/);
+                        last if (($tag_value) = $sam[$i] =~ /^${tag}:[ZiIcC]:(.*)/);
                     }
                     next if (!exists($tag_values->{$tag_value||""}));
                 }
@@ -2107,6 +2107,8 @@ sub test_view
          ['-D', "BClong:${fobc}"], 1],
         ['tv_d_different_tags', { tag => 'BC', tag_values => { ACGT => 1, grp2 => 1 }},
          ['-d', 'BC:ACGT', '-d', 'RG:grp2' ], 1],
+        ['tv_NM_13', { tag => 'NM', tag_values => { 13 => 1 }},
+         ['-d', 'NM:13'], 0],
         # Libraries
         ['lib2', { libraries => { 'Library 2' => 1 }}, ['-l', 'Library 2'], 0],
         ['lib3', { libraries => { 'Library 3' => 1 }}, ['-l', 'Library 3'], 0],
